--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-
+<html>
+  <head><title>Welcome</title></head>
+  <body>
+    <h1>Hello from my website!</h1>
+    <p>Made for free using GitHub Pages.</p>
+  </body>
+</html>
