--- a/index.html
+++ b/index.html
@@ -1,7 +1,66 @@
+<!DOCTYPE html>
 <html>
-  <head><title>Welcome</title></head>
-  <body>
-    <h1>Hello from my website!</h1>
-    <p>Made for free using GitHub Pages.</p>
-  </body>
+<head>
+  <title>Click to Steal</title>
+  <style>
+    body {
+      background-color: #111;
+      color: #0f0;
+      font-family: 'Arial', sans-serif;
+      text-align: center;
+      padding-top: 50px;
+    }
+    #stealBtn {
+      font-size: 25px;
+      padding: 20px 40px;
+      background-color: #0f0;
+      color: black;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+    }
+    #stealBtn:hover {
+      background-color: #0c0;
+    }
+    #score {
+      font-size: 30px;
+      margin: 20px;
+    }
+    #upgrade {
+      font-size: 18px;
+      margin-top: 30px;
+      color: #aaa;
+    }
+  </style>
+</head>
+<body>
+
+  <h1>🧠 Click to Steal Brainrot</h1>
+  <div id="score">0 Brainrot Stolen</div>
+  <button id="stealBtn">🕵️ Steal!</button>
+  <div id="upgrade"></div>
+
+  <script>
+    let score = 0;
+    let upgrades = [
+      "You stole from a noob!",
+      "You stole from a bacon!",
+      "You stole from a dev!",
+      "You hacked the server!",
+      "You're the KING of brainrot!"
+    ];
+    let level = 0;
+
+    document.getElementById("stealBtn").onclick = function () {
+      score++;
+      document.getElementById("score").innerText = score + " Brainrot Stolen";
+
+      if (score % 10 === 0 && level < upgrades.length) {
+        document.getElementById("upgrade").innerText = upgrades[level];
+        level++;
+      }
+    }
+  </script>
+
+</body>
 </html>
