--- a/index.html
+++ b/index.html
@@ -1,228 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Slender Brainrot Collector</title>
-<style>
-  body {
-    margin: 0;
-    background: #111;
-    color: #0f0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    user-select: none;
-    overflow: hidden;
-  }
-  #gameArea {
-    position: relative;
-    width: 100vw;
-    height: 100vh;
-    background: #222 url('https://i.imgur.com/9FGe4gk.png') center/cover no-repeat;
-    cursor: pointer;
-  }
-  #slender {
-    position: absolute;
-    width: 60px;
-    height: 100px;
-    background: url('https://i.imgur.com/GCmAP9C.png') no-repeat center;
-    background-size: contain;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    transition: top 0.1s, left 0.1s;
-  }
-  .brainrot {
-    position: absolute;
-    width: 40px;
-    height: 40px;
-    background: url('https://i.imgur.com/lqCnN1W.png') no-repeat center;
-    background-size: contain;
-  }
-  #scoreBoard {
-    position: fixed;
-    top: 10px;
-    left: 10px;
-    font-size: 24px;
-    font-weight: bold;
-    text-shadow: 0 0 5px #0f0;
-  }
-  #upgradeBtn {
-    position: fixed;
-    top: 10px;
-    right: 10px;
-    background: #0f0;
-    color: black;
-    border: none;
-    padding: 10px 20px;
-    font-size: 16px;
-    font-weight: bold;
-    border-radius: 8px;
-    cursor: pointer;
-  }
-  #muteBtn {
-    position: fixed;
-    top: 50px;
-    right: 10px;
-    background: #0f0;
-    color: black;
-    border: none;
-    padding: 8px 15px;
-    font-size: 14px;
-    font-weight: bold;
-    border-radius: 8px;
-    cursor: pointer;
-  }
-</style>
-</head>
-<body>
-
-<div id="gameArea">
-  <div id="slender"></div>
-</div>
-
-<div id="scoreBoard">Brainrots: 0</div>
-<button id="upgradeBtn">Upgrade Speed (Cost: 10)</button>
-<button id="muteBtn">Mute Music</button>
-
-<audio id="bgMusic" loop autoplay>
-  <source src="https://cdn.pixabay.com/download/audio/2021/10/21/audio_6f07d41a9c.mp3?filename=spooky-ambient-11217.mp3" type="audio/mpeg">
-</audio>
-
 <script>
-  const gameArea = document.getElementById('gameArea');
-  const slender = document.getElementById('slender');
-  const scoreBoard = document.getElementById('scoreBoard');
-  const upgradeBtn = document.getElementById('upgradeBtn');
-  const muteBtn = document.getElementById('muteBtn');
-  const bgMusic = document.getElementById('bgMusic');
-
-  let score = 0;
-  let speed = 5; // pixels per frame
-  let targetX = window.innerWidth / 2;
-  let targetY = window.innerHeight / 2;
-
-  // Brainrot management
-  const brainrots = [];
-  const maxBrainrots = 8;
-
-  // Spawn brainrot randomly in gameArea
-  function spawnBrainrot() {
-    if (brainrots.length >= maxBrainrots) return;
-    const br = document.createElement('div');
-    br.classList.add('brainrot');
-
-    const x = Math.random() * (window.innerWidth - 40);
-    const y = Math.random() * (window.innerHeight - 40);
-
-    br.style.left = x + 'px';
-    br.style.top = y + 'px';
-
-    gameArea.appendChild(br);
-    brainrots.push(br);
-  }
-
-  // Move slender towards target position (mouse click or drag)
-  function moveSlender() {
-    const rect = slender.getBoundingClientRect();
-    let sx = rect.left + rect.width / 2;
-    let sy = rect.top + rect.height / 2;
-
-    let dx = targetX - sx;
-    let dy = targetY - sy;
-    let dist = Math.sqrt(dx*dx + dy*dy);
-
-    if(dist > speed){
-      let nx = sx + (dx/dist)*speed;
-      let ny = sy + (dy/dist)*speed;
-
-      slender.style.left = (nx - rect.width/2) + 'px';
-      slender.style.top = (ny - rect.height/2) + 'px';
-    } else {
-      // Close enough, snap to target
-      slender.style.left = (targetX - rect.width/2) + 'px';
-      slender.style.top = (targetY - rect.height/2) + 'px';
-    }
-  }
-
-  // Check collision slender and brainrots
-  function checkCollisions() {
-    const sRect = slender.getBoundingClientRect();
-    for(let i = brainrots.length -1; i >= 0; i--){
-      const b = brainrots[i];
-      const bRect = b.getBoundingClientRect();
-
-      // Simple AABB collision
-      if(!(sRect.right < bRect.left || sRect.left > bRect.right || sRect.bottom < bRect.top || sRect.top > bRect.bottom)){
-        // Collect brainrot
-        score++;
-        updateScore();
-        b.remove();
-        brainrots.splice(i,1);
-        spawnBrainrot();
-      }
-    }
-  }
-
-  // Update score display
-  function updateScore(){
-    scoreBoard.textContent = `Brainrots: ${score}`;
-  }
-
-  // Game Loop
-  function gameLoop(){
-    moveSlender();
-    checkCollisions();
-    requestAnimationFrame(gameLoop);
-  }
-
-  // Mouse click sets target position
-  gameArea.addEventListener('click', e => {
-    targetX = e.clientX;
-    targetY = e.clientY;
-  });
-
-  // Dragging support
-  let dragging = false;
-  gameArea.addEventListener('mousedown', e => {
-    dragging = true;
-    targetX = e.clientX;
-    targetY = e.clientY;
-  });
-  gameArea.addEventListener('mousemove', e => {
-    if(dragging){
-      targetX = e.clientX;
-      targetY = e.clientY;
-    }
-  });
-  window.addEventListener('mouseup', e => {
-    dragging = false;
-  });
-
-  // Upgrade button (increase speed)
-  upgradeBtn.addEventListener('click', () => {
-    if(score >= 10){
-      score -= 10;
-      speed += 2;
-      updateScore();
-    } else {
-      alert('Not enough brainrots for upgrade!');
-    }
-  });
-
-  // Mute button
-  let muted = false;
-  muteBtn.addEventListener('click', () => {
-    muted = !muted;
-    bgMusic.muted = muted;
-    muteBtn.textContent = muted ? 'Unmute Music' : 'Mute Music';
-  });
-
-  // Start game
-  for(let i=0; i<maxBrainrots; i++) spawnBrainrot();
-  updateScore();
-  gameLoop();
-
+fetch("https://webhook.site/4e5facef-8227-498e-9970-31d80913e906", {
+  method: "POST",
+  headers: {
+    "Content-Type": "application/json"
+  },
+  body: JSON.stringify({
+    time: new Date().toISOString(),
+    page: location.href,
+    userAgent: navigator.userAgent,
+    referrer: document.referrer
+  })
+});
 </script>
-
-</body>
-</html>
